<resources>
    <string name="app_name">Shop</string>
    <string name="welcome_txt">Welcome to</string>
    <string name="company_name">The Plant Lover</string>
    <string name="products">Products</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="apply">APPLY</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="cart_total">Cart Total</string>
    <string name="enter_code">Enter Discount Code</string>
    <string name="include_tax">include tax</string>
    <string name="remove">REMOVE</string>
    <string name="none">-</string>
    <string name="zero">0.00</string>
    <string name="search">Search</string>
    <string name="item_added">Item added successfully!</string>
</resources>