<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_txt"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/company_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/products"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <View
        android:id="@+id/underline"
        android:layout_width="30dp"
        android:layout_height="1dp"
        android:layout_below="@+id/subHeader"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underline"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:hint="@string/search"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="4dp"
        android:scrollbars="vertical" />


</RelativeLayout>